--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-cookies": "^1.7.4",
+    "vue-i18n": "^8.27.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
@@ -49,7 +54,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {},
+    "rules": {
+      "vue/multi-word-component-names": 0
+    },
     "overrides": [
       {
         "files": [
