--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
+    "primeicons": "^5.0.0",
+    "primevue": "^2.9.1",
     "vue": "^2.6.14",
     "vue-cookies": "^1.7.4",
     "vue-i18n": "^8.27.0",
